--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div id="group-search">
                 <div id="keys">
                     <button>TODAS</button> 
+                    <button>☆</button> 
                     <button>A</button>
                     <button>B</button> 
                     <button>C</button> 
