--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <div id="video-overlay-dropdown"></div>
               </div>
               <button id="close-overlay-button"><span>✕</span></button>
-              <iframe id="video-iframe" src="" frameborder="0" allowfullscreen></iframe>
+              <iframe id="video-iframe" src="" frameborder="0" allowfullscreen allow="autoplay"></iframe>
               <button id="prev-video-button">
                 &#10094;
                 <span class="tooltip-text tooltip-top">Anterior</span>
