--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Séries</title>
-    <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
+    <link rel="icon" type="image/png" href="https://i.imgur.com/dSX7Wic.png">
+    <!-- <link rel="icon" type="image/png" href="https://i.imgur.com/omrKbqO.png"> -->
+    <!-- <link rel="icon" type="image/png" href="https://i.imgur.com/fqUVnMo.png"> -->
     <link rel="stylesheet" href="resources/styles.css">
 </head>
 <body>
@@ -12,9 +14,38 @@
     <div id="main" class="show">
         <header>
             <div id="title">
+                <!-- <img src="https://i.imgur.com/dSX7Wic.png" alt="Logo" id="logo"> -->
+                <svg width="50" height="50" viewBox="0 0 297 297" id="logo" class="show">
+                    <defs>
+                        <style>
+                            :root {
+                                --primary-circle: #c00c42;      /* Círculo principal */
+                                --shadow-circle: #69132f;       /* Sombra do círculo */
+                                --rewind-lines: #39424e;        /* Linhas das Antenas */
+                                --player-bg-left: #12161d;      /* Fundo do player (esquerda e direita) */
+                                --player-bg-right: #12161d;     /* Mesmo tom para consistência */
+                                --buttons: #2d343f;             /* Botões circulares */
+                                --screen-left: #444d5b;         /* Tela esquerda */
+                                --screen-right: #2d343f;        /* Tela direita */
+                            }
+                        </style>
+                    </defs>
+                    <g>
+                        <circle cx="148.5" cy="148.5" r="148.5" fill="var(--primary-circle)" opacity="1"></circle>
+                        <path d="M297 148.5c0-2.326-.061-4.638-.167-6.938l-53.499-53.9L53.299 224.778l69.91 70.067a149.386 149.386 0 0 0 25.291 2.154C230.514 297 297 230.514 297 148.5z" fill="var(--shadow-circle)" opacity="1"></path>
+                        <path d="M142.273 92.027a5.5 5.5 0 0 1-7.66-1.351l-25.237-36.043a5.5 5.5 0 1 1 9.011-6.309l25.237 36.043a5.5 5.5 0 0 1-1.351 7.66z" fill="var(--rewind-lines)" opacity="1"></path>
+                        <path d="M147.607 92.027a5.5 5.5 0 0 0 7.66-1.351l25.237-36.043a5.5 5.5 0 1 0-9.011-6.309l-25.237 36.043a5.502 5.502 0 0 0 1.351 7.66z" fill="var(--rewind-lines)" opacity="1"></path>
+                        <path d="M66.131 230.318h164.738c9.737 0 17.631-7.894 17.631-17.631V100.131c0-9.737-7.894-17.631-17.631-17.631H66.131c-9.737 0-17.631 7.894-17.631 17.631v112.556c0 9.737 7.894 17.631 17.631 17.631z" fill="var(--player-bg-left)" opacity="1"></path>
+                        <path d="M230.869 82.5h-85.702v147.818h85.702c9.737 0 17.631-7.894 17.631-17.631V100.131c0-9.737-7.894-17.631-17.631-17.631z" fill="var(--player-bg-right)" opacity="1"></path>
+                        <circle cx="222.5" cy="119.5" r="13.5" fill="var(--buttons)" opacity="1"></circle>
+                        <circle cx="222.5" cy="162" r="13.5" fill="var(--buttons)" opacity="1"></circle>
+                        <path d="M81.417 214.5h101.166c8.514 0 15.417-6.902 15.417-15.417v-85.348c0-8.514-6.902-15.417-15.417-15.417H81.417C72.903 98.318 66 105.22 66 113.735v85.348c0 8.515 6.902 15.417 15.417 15.417z" fill="var(--screen-left)" opacity="1"></path>
+                        <path d="M182.583 98.318h-37.416V214.5h37.416c8.514 0 15.417-6.902 15.417-15.417v-85.348c0-8.515-6.902-15.417-15.417-15.417z" fill="var(--screen-right)" opacity="1"></path>
+                    </g>
+                </svg>
                 <h1 id="series-title" class="show">Séries</h1>
                 <h1 id="series-name" class="hidden"></h1>
-                <button id="back-button" class="hidden">&#10094;</button>
+                <button id="back-button" class="hidden">❮</button>
             </div>
         </header>
 
