--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
                 </div>
                 <button id="close-overlay-button"><span>✕</span></button>
                 <iframe id="video-iframe" src="" frameborder="0" allowfullscreen allow="autoplay"></iframe>
-                <button id="prev-video-button">
-                    ❮
+                <button id="prev-video-button"> ❮
                     <span class="tooltip-text tooltip-top">Anterior</span>
                 </button>
-                <button id="next-video-button">
-                    ❯
+
+                <button id="next-video-button"> ❯
                     <span class="tooltip-text tooltip-top">Próximo</span>
                 </button>
             </div>
