Update - Refix Logs
Novas imagem de Paulo o Apostolo
Refeito sistema de Logs

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
             </div>
         </header>
 
-        <div id="logs-section" class="hidden">
-           
-        </div>
+        <div id="logs-section" class="hidden"></div>
 
         <div id="home" class="show">
             <div id="myCarousel" class="carousel slide myCarousel" data-interval="false" data-ride="carousel">
