Update - Lista de Logs Scroll bar Fixada

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <button id="back-button" class="hidden">❮</button>
                 <h1 id="series-title" class="show">Séries</h1>
                 <h1 id="series-name" class="hidden"></h1>
+                <h1 id="series-logs" class="hidden">Lista de Logs</h1>
                 <label class="menu">
                     <input class="inp" type="checkbox" />
                     <div class="bar">
