--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="resources/carrousel.css">
     <link rel="stylesheet" href="resources/styles.css">
+    <link rel="stylesheet" href="resources/mobile.css">
 </head>
 <body>
     <div id="main" class="show">
