UPDATE TEST SLIDE SELECT + HOVER
Atualização do hover das arrow next/prev
Atualização de seleção no container

--- a/slide/test.html
+++ b/slide/test.html
@@ -20,7 +20,7 @@
       <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1600&auto=format&fit=crop')">
         <div class="content">
           <h1 class="brand-title">RitAS</h1>
-          <div class="row"><span class="chip new">NOVIDADE</span><span class="chip age">14</span><span class="chip">Filme</span><span class="chip">Documentário</span></div>
+          <div class="row"><span class="chip new">Destaque</span>
           <p class="desc">Um mergulho na intimidade de Rita Lee, a rainha do rock brasileiro! Documentário exclusivo.</p>
           <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
         </div>
@@ -29,7 +29,7 @@
       <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1529156069898-49953e39b3ac?q=80&w=1600&auto=format&fit=crop')">
         <div class="content">
           <h1 class="brand-title">Som &amp; Alma</h1>
-          <div class="row"><span class="chip new">Destaque</span><span class="chip age">12</span><span class="chip">Série</span><span class="chip">Música</span></div>
+          <div class="row"><span class="chip new">Destaque</span>
           <p class="desc">Artistas contam suas histórias entre bastidores, palcos e encontros improváveis.</p>
           <div class="actions"><button class="btn primary">Assistir</button><button class="btn">Minha Lista</button></div>
         </div>
@@ -38,7 +38,7 @@
       <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1600&auto=format&fit=crop')">
         <div class="content">
           <h1 class="brand-title">Inside Tech</h1>
-          <div class="row"><span class="chip new">Novo</span><span class="chip age">10</span><span class="chip">Documentário</span><span class="chip">Tecnologia</span></div>
+          <div class="row"><span class="chip new">NOVOS EPISÓDIOS</span>
           <p class="desc">Os bastidores das inovações que mudaram o mundo.</p>
           <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
         </div>
@@ -47,7 +47,7 @@
       <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1543015955-1a4c48f0a0e3?q=80&w=1600&auto=format&fit=crop')">
         <div class="content">
           <h1 class="brand-title">Clássicos</h1>
-          <div class="row"><span class="chip new">Coleção</span><span class="chip age">L</span><span class="chip">Filme</span><span class="chip">Remaster</span></div>
+          <div class="row"><span class="chip new">Destaque</span>
           <p class="desc">Obras que marcaram gerações, agora restauradas e com extras.</p>
           <div class="actions"><button class="btn primary">Ver agora</button><button class="btn">Minha Lista</button></div>
         </div>
@@ -56,7 +56,7 @@
       <section class="slide clone" style="--bg: url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1600&auto=format&fit=crop')">
         <div class="content">
           <h1 class="brand-title">RitAS</h1>
-          <div class="row"><span class="chip new">NOVIDADE</span><span class="chip age">14</span><span class="chip">Filme</span><span class="chip">Documentário</span></div>
+          <div class="row"><span class="chip new">Destaque</span>
           <p class="desc">Um mergulho na intimidade de Rita Lee, a rainha do rock brasileiro! Documentário exclusivo.</p>
           <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
         </div>
