UPDATE TEST - CONTINUAÇÃO DO SLIDE

--- a/slide/test.html
+++ b/slide/test.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hero com Slides</title>
-<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,48 +17,90 @@
     <input type="radio" name="slider" id="s5">
 
     <div class="slides">
-      <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1600&auto=format&fit=crop')">
+      <section class="slide" style="--bg: url('https://i.imgur.com/H7LkieU.png')">
         <div class="content">
-          <h1 class="brand-title">RitAS</h1>
+          <h1 class="brand-title">A TERRA PROMETIDA</h1>
           <div class="row"><span class="chip new">Destaque</span>
-          <p class="desc">Um mergulho na intimidade de Rita Lee, a rainha do rock brasileiro! Documentário exclusivo.</p>
-          <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
+          <p class="desc">
+            Após a morte de Moisés, Josué é o novo líder dos hebreus 
+            e terá que cumprir uma difícil missão ordenada por Deus: 
+            Comandar as 12 tribos de Israel na conquista de Canaã, 
+            a Terra Prometida. Continuação da saga Os Dez Mandamentos.
+          </p>
+          <div class="actions">
+            <button class="btn primary">ASSISTIR</button>
+            <button class="btn">FAVORITAR</button>
+          </div>
         </div>
       </section>
 
-      <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1529156069898-49953e39b3ac?q=80&w=1600&auto=format&fit=crop')">
+      <section class="slide" style="--bg: url('https://i.imgur.com/v0uF3s6.png')">
         <div class="content">
-          <h1 class="brand-title">Som &amp; Alma</h1>
+          <h1 class="brand-title">OS DEZ MANDAMENTOS</h1>
           <div class="row"><span class="chip new">Destaque</span>
-          <p class="desc">Artistas contam suas histórias entre bastidores, palcos e encontros improváveis.</p>
-          <div class="actions"><button class="btn primary">Assistir</button><button class="btn">Minha Lista</button></div>
+          <p class="desc">
+            Grande sucesso da televisão brasileira, este épico bíblico 
+            narra a saga de Moisés, o hebreu que escapou da morte ainda 
+            bebê, virou príncipe do Egito eacabou se transformando no 
+            líder escolhido por Deus para libertar seu povo da escravidão.
+          </p>
+          <div class="actions">
+            <button class="btn primary">ASSISTIR</button>
+            <button class="btn">FAVORITAR</button>
+          </div>
         </div>
       </section>
 
-      <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1600&auto=format&fit=crop')">
+      <section class="slide" style="--bg: url('https://i.imgur.com/gnZ9oJ0.png')">
         <div class="content">
-          <h1 class="brand-title">Inside Tech</h1>
-          <div class="row"><span class="chip new">NOVOS EPISÓDIOS</span>
-          <p class="desc">Os bastidores das inovações que mudaram o mundo.</p>
-          <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
+          <h1 class="brand-title">JESUS</h1>
+          <div class="row"><span class="chip new">Destaque</span>
+          <p class="desc">
+            Quando a história dos homens estava perto de cair em desgraça, 
+            a história domundo muda para sempre após a chegada do Salvador. 
+            Jesus, a novela, contapela primeira vez na íntegra a trajetória 
+            do homem que revolucionou a humanidade com sua palavra e suas 
+            ações e dividiu a história em dois: antes e depois de Cristo.
+          </p>
+          <div class="actions">
+            <button class="btn primary">ASSISTIR</button>
+            <button class="btn">FAVORITAR</button>
+          </div>
         </div>
       </section>
 
-      <section class="slide" style="--bg: url('https://images.unsplash.com/photo-1543015955-1a4c48f0a0e3?q=80&w=1600&auto=format&fit=crop')">
+      <section class="slide" style="--bg: url('https://i.imgur.com/sz0LCJC.png')">
         <div class="content">
-          <h1 class="brand-title">Clássicos</h1>
+          <h1 class="brand-title">O RICO E LÁZARO</h1>
           <div class="row"><span class="chip new">Destaque</span>
-          <p class="desc">Obras que marcaram gerações, agora restauradas e com extras.</p>
-          <div class="actions"><button class="btn primary">Ver agora</button><button class="btn">Minha Lista</button></div>
+          <p class="desc">
+            Após o governo de vários reis que se afastaram de Deus, Jerusalém 
+            encontra-se mergulhada na idolatria. A grande amizade de Zac e Asher 
+            é abalada pelo amor que ambos sentem pela companheira de infância, 
+            Joana. Ao contrário deles, ela acredita nas profecias de Jeremias 
+            e empenha-se para que o povo hebreu se volte novamente para Deus.
+          </p>
+          <div class="actions">
+            <button class="btn primary">ASSISTIR</button>
+            <button class="btn">FAVORITAR</button>
+          </div>
         </div>
       </section>
 
-      <section class="slide clone" style="--bg: url('https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=1600&auto=format&fit=crop')">
+      <section class="slide clone" style="--bg: url('https://i.imgur.com/H7LkieU.png')">
         <div class="content">
-          <h1 class="brand-title">RitAS</h1>
+          <h1 class="brand-title">A TERRA PROMETIDA</h1>
           <div class="row"><span class="chip new">Destaque</span>
-          <p class="desc">Um mergulho na intimidade de Rita Lee, a rainha do rock brasileiro! Documentário exclusivo.</p>
-          <div class="actions"><button class="btn primary">Saiba mais</button><button class="btn">Minha Lista</button></div>
+          <p class="desc">
+            Após a morte de Moisés, Josué é o novo líder dos hebreus 
+            e terá que cumprir uma difícil missão ordenada por Deus: 
+            Comandar as 12 tribos de Israel na conquista de Canaã, 
+            a Terra Prometida. Continuação da saga Os Dez Mandamentos.
+          </p>
+          <div class="actions">
+            <button class="btn primary">ASSISTIR</button>
+            <button class="btn">FAVORITAR</button>
+          </div>
         </div>
       </section>
     </div>
